--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -99,12 +99,14 @@
           <h1 class="text-center title">Missions</h1>
         </div>
         <div class="popup-body">
-          <a href="javascript:void()" class="hideMissionsPopup">Close</a>
+          <a href="javascript:voeed()" class="hideMissionsPopup">Close</a>
           <div class="missions-list">
             <ul></ul>
           </div>
           <div class="mission-interface" style="display: none">
-            <a href="javascript:console.log();" id="backFromInterface">Back</a>
+            <a href="javascript:console.log();" class="backFromInterface"
+              >Back</a
+            >
             <div class="user-image-pick">
               <div class="image-line">
                 <div class="mission-image image-picker"></div>
@@ -120,15 +122,46 @@
               </div>
             </div>
           </div>
+          <div class="mission-selector" style="display: none">
+            <a href="javascript:console.log();" class="backFromInterface"
+              >Back</a
+            >
+            <table class="table table-striped">
+              <% if (locals.imageExist && imageExist.images &&
+              imageExist.images.length>0) { %> <%
+              imageExist.images.forEach((img)=>{ %>
+              <tr>
+                <td>
+                  <img
+                    src="/images/mapicons/<%= img %>"
+                    width="100px"
+                    alt="<%= img %>"
+                    loading="lazy"
+                  />
+                </td>
+                <td class="align-middle"><h1><%= img %></h1></td>
+                <td class="align-middle">
+                  <button class="btn btn-primary">Select</button>
+                </td>
+              </tr>
+              <% }); %><% }else{%>
+              <div class="p-2 border-1 rounded-1">No Image Captured!</div>
+              <%}%>
+            </table>
+          </div>
         </div>
       </div>
     </div>
     <script>
+
+      function voeed(){return true;}
       let mapParsedId = document.getElementById("mapParsedId").value;
       let missions=<%- JSON.stringify(missions) %>;
+      let imageExists=<%- JSON.stringify(imageExist) %>;
       let notyf;
       let circleOpacity = 100;
       $(document).ready(() => {
+
         let index=0;
         $(".mission-container .missions-list ul").empty();
         missions.forEach(mission=>{
@@ -146,10 +179,15 @@
             targetMission.images.forEach((image)=>{
                 $(".user-image-pick").append(`<div class="image-line"><div class="mission-image image-picker"></div><div class="mission-image"><img src="/images/mapicons/${image}" loading="lazy"></div></div>`);
             });
+            $(".image-picker").off("click").on("click",()=>{
+              $(".mission-selector").show();
+              $(".mission-interface").hide();
+            });
         });
-        $("#backFromInterface").click(()=>{
+        $(".backFromInterface").click(()=>{
             $(".missions-list").fadeIn();
             $(".mission-interface").hide();
+            $(".mission-selector").hide();
             $(".mission-container .title").text("Missions");
         });
         $(".hideMissionsPopup").click(()=>{
