--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -169,18 +169,7 @@
               $(`.image-picker[data-id='${boxIndex}']`).off("click");
               $(`.image-picker[data-id='${boxIndex}']`).removeClass("image-picker");
               if(targetMission.images.length==selectedImages.length){
-                let isOkay=1;
-                console.log(targetMission.images);
-                console.log(selectedImages);
-                for (let index = 0; index < selectedImages.length; index++) {
-                  if(targetMission.images[index]!=selectedImages[index]){
-                    isOkay=0;
-                    break;
-                  }
-                }
-                if(!isOkay) return ;
                 $(".redeem-action-bar").show();
-                notyf.success("Perfectly Done!");
               }
             })
           }
@@ -189,6 +178,7 @@
       $(document).ready(() => {
 
         let index=0;
+        let redeemReady=1;
         $(".mission-container .missions-list ul").empty();
         missions.forEach(mission=>{
             $(".mission-container .missions-list ul").append(`<li data-id=${++index}>${mission.name}</li>`);
@@ -198,8 +188,29 @@
             if(!missionId) return;
             targetMission=missions[missionId-1];
             if(!targetMission) return $(".mission-interface").hide(()=>{$(".missions-list").fadeIn()});
-            $("button.btn.redeembtn").off("click").on("click", ()=>{
-              window.location.href=targetMission.redeemLink;
+            $("button.btn.redeembtn").off("click").on("click", function(){
+              if(!redeemReady) return;
+              redeemReady=0;
+              $(this).text("Please Wait ...");
+              $.post("/user/redeem/route", { images: targetMission.images, secrets: selectedImages })
+                .done(function(data, textStatus, xhr) {
+                  const response = xhr.responseJSON || {};
+                  console.log(response.redeemLink);
+                  if (xhr.status === 200) {
+                    notyf.success(response.message);
+                  }
+                })
+                .fail(function(xhr, textStatus, errorThrown) {
+                  const response = xhr.responseJSON || {};
+                  if (xhr.status === 405) {
+                    notyf.error("Invalid Matching, Please Match them Correctly!");
+                  } else {
+                    notyf.error(response.message);
+                  }
+                }).always(()=>{
+                  redeemReady=1;
+                  $(this).text("REDEEM");
+                });
             })
             $(".missions-list").hide();
             $(".mission-interface").fadeIn();
